--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,14 @@ h6 {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.button:hover {
+    background-color: #404bbf;
+}
+
+.button:focus {
+    background-color: #404BBF;
+}
+
 /* --------------section-2-------------- */
 
 .section-two {
@@ -382,7 +390,7 @@ h6 {
 }
 
 .list-item-four {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .list-item-four:hover {
@@ -431,7 +439,7 @@ h6 {
 .list-section-four {
     display: flex;
     flex-direction: column;
-    gap: 48px
+    gap: 48px;
 }
 
 .app {
@@ -449,8 +457,140 @@ h6 {
 
 /* --------------------footer-------------------- */
 
+.page-footer {
+    background-color: #2e2f42;
+    padding: 96px 0;
+}
 
+.footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
+.footer-logo {
+    display: flex;
+    margin-bottom: 16px;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-logo .logo-part {
+    color: #f4f4fd;
+}
+
+.logo-container {
+    margin-bottom: 72px;
+}
+
+.footer-text-left {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    width: 288px;
+}
+
+.footer-text-right {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.icons-list-footer {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+.icons-footer-link {
+    background-color: #4d5ae5;
+    padding: 8px 8px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-telegram {
+    fill: #fff;
+    margin-left: 16px;
+}
+
+.icons-footer-link:hover,
+.icons-footer-link:focus {
+    background-color: #31d0aa;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.subscribe-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    text-align: center;
+}
+
+.subscribe-form {
+    display: flex;
+    justify-content: center;
+}
+
+.input-footer {
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    width: 288px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    color: #ffffff;
+    padding-left: 16px;
+    margin-bottom: 16px;
+}
+
+input::placeholder {
+    color: #ffffff;
+}
+
+.social-media-footer {
+    margin-bottom: 72px;
+}
+
+.button-footer {
+    border-radius: 4px;
+    border: none;
+    padding: 8px 24px;
+    max-width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
 
 /* --------------------TABLET-------------------- */
 
@@ -583,7 +723,7 @@ h6 {
 }
 
 .list-item-three {
-    width: calc((100% - 24) / 2);
+    width: calc((100% - 24px) / 2);
 }
 
 /* --------------section-4-------------- */
@@ -594,6 +734,7 @@ h6 {
 
 .list-item-four {
     width: calc((100% - 24px) / 2);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .list-section-four {
@@ -606,7 +747,50 @@ h6 {
 
 /* --------------footer-------------- */
 
+.page-footer {
+    background-color: #2e2f42;
+    padding: 96px 108px;
+}
 
+.footer-container {
+    column-gap: 24px;
+    row-gap: 72px;
+    justify-content: flex-start;
+}
+
+.footer-logo {
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.footer-text-left {
+    width: 264px;
+}
+
+.subscribe-text,
+.footer-text-right {
+    text-align: start;
+}
+
+.subscribe-form {
+    display: flex;
+    gap: 24px;
+    align-items: flex-end;
+}
+
+.input-footer {
+    width: 264px;
+}
+
+.button-footer {
+    margin: 0;
+    margin-top: 40px;
+}
+
+.logo-container, 
+.social-media-footer {
+    margin-bottom: 0;
+}
 
 }
 
@@ -704,7 +888,7 @@ h6 {
 }
 
 .list-item-three {
-    width: calc((100% - 72) / 4);
+    width: calc((100% - 72px) / 4);
 }
 
 .icons-main-link:hover,
@@ -721,6 +905,12 @@ h6 {
 
 .list-item-four {
     width: calc((100% - 48px) / 3);
+    box-shadow: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-item-four:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .list-section-four {
@@ -733,151 +923,45 @@ h6 {
 
 /* --------------footer-------------- */
 
-
-
-
-
-
-
-    .button:hover {
-    background-color: #404bbf;
+.page-footer {
+    padding: 100px 0;
 }
 
-    .button:focus {
-    background-color: #404BBF;
+.footer-container {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: baseline;
 }
-        
-        .footer-logo .logo-part {
-            color: #f4f4fd;
-        }
-    
-        .footer-logo {
-            display: inline-block;
-            margin-bottom: 16px;
-        }
-    
-        .footer-text-left {
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-            color: #f4f4fd;
-            width: 264px;
-        }
-    
-        .footer-text-right {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-            color: #fff;
-            margin-bottom: 16px;
-        }
-    
-        .page-footer {
-            background-color: #2e2f42;
-            padding-bottom: 100px;
-            padding-top: 100px;
-    
-        }
-    
-        .footer-container {
-            display: flex;
-            align-items: baseline;
-        }
-    
-        .logo-container {
-            margin-right: 120px;
-        }
-    
-        .footer-text-right {
-            margin-bottom: 16px;
-        }
-    
-        .icons-list-footer {
-            display: flex;
-            justify-content: center;
-            gap: 16px;
-        }
-    
-        .icons-footer-link {
-            background-color: #4d5ae5;
-            padding: 8px 8px;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        .icons-footer-link:hover,
-        .icons-footer-link:focus {
-            background-color: #31d0aa;
-        }
-    
-        .form-container {
-            margin-left: 80px;
-        }
-    
-        .subscribe-form {
-            display: flex;
-            gap: 24px;
-            align-items: flex-end;
-        }
-    
-        .subscribe-text {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-            color: #fff;
-            margin-bottom: 16px;
-        }
-    
-        .input-footer {
-            background-color: transparent;
-            border: 1px solid #ffffff;
-            border-radius: 4px;
-            width: 264px;
-            height: 40px;
-            font-size: 12px;
-            line-height: 2;
-            letter-spacing: 0.04em;
-            box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-            color: #ffffff;
-            padding-left: 16px;
-        }
-    
-        input::placeholder {
-            color: #ffffff;
-        }
-    
-        .icon-telegram {
-            fill: #fff;
-            margin-left: 16px;
-        }
-    
-        .button-footer {
-            cursor: pointer;
-            border-radius: 4px;
-            border: none;
-            min-width: 165px;
-            height: 40px;
-            background: #4d5ae5;
-            font-family: "Roboto", sans-serif;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.04em;
-            text-align: center;
-            color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-    
-        }
-    
+
+.logo-container {
+    margin-right: 120px;
+}
+
+.footer-logo {
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.footer-text-left {
+    width: 264px;
+}
+
+.form-container {
+    margin-left: 80px;
+}
+
+.input-footer {
+    margin: 0;
+}
+
+.subscribe-form {
+    display: flex;
+    gap: 24px;
+    align-items: flex-end;
+}
+
+
+
         /* -----------MODAL----------- */
     
         .backdrop {
