--- a/css/styles.css
+++ b/css/styles.css
@@ -367,7 +367,8 @@ h6 {
 }
 
 .list-item-three {
-    background-color: #FFFFFF border-bottom: 1px solid #e7e9fc;
+    background-color: #FFFFFF;
+    border-bottom: 1px solid #e7e9fc;
     border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -597,6 +598,11 @@ input::placeholder {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-footer:hover {
+    background-color: #404bbf;
 }
 
 /* ---------------MODAL--------------- */
