--- a/css/styles.css
+++ b/css/styles.css
@@ -820,6 +820,10 @@ input::placeholder {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.button-submit:hover {
+    background-color: #404bbf;
+}
+
 /* --------------------TABLET-------------------- */
 
 @media screen and (min-width: 768px) {
